--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,10 @@
             <artifactId>spring-messaging</artifactId>
             <version>5.3.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
