--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=iamducthanh01@gmail.com
+spring.mail.password=adgjadgj
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
